Updates to lambda notebook

--- a/better-python/lambda-blank.ipynb
+++ b/better-python/lambda-blank.ipynb
@@ -18,11 +18,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,4,5,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "a = [1,2,3,4,5,6]\n",
     "map(lambda x: x**3, a)"
    ]
   },
@@ -62,16 +72,85 @@
     "class my_obj(object):\n",
     "    def __init__(self, name=None, rank=None):\n",
     "        self.name = name\n",
-    "        self.rank = rank\n",
-    "        \n",
+    "        self.rank = rank"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "objs = [\n",
     "    my_obj(name='ten', rank=10), \n",
     "    my_obj(name='seven', rank=7),\n",
-    "    my_obj(name='three', rank=3)]\n",
-    "\n",
-    "print [o.name for o in sorted(objs)]\n",
-    "print [o.name for o in sorted(objs, key=lambda x: x.name)]\n",
-    "print [o.name for o in sorted(objs, key=lambda x: x.rank)]"
+    "    my_obj(name='three', rank=3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[o.name for o in sorted(objs)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[o.name for o in sorted(objs, key=lambda x: x.name)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "[o.name for o in sorted(objs, key=lambda x: x.rank)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## closures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "n = 10\n",
+    "map(lambda x: x+n, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for n in range(1,6):\n",
+    "    print map(lambda x: x*n, a)"
    ]
   },
   {
@@ -170,11 +249,20 @@
    "source": [
     "def obj_name(o):\n",
     "    return o.name\n",
+    "[o.name for o in sorted(objs, key=obj_name)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "def obj_rank(o):\n",
     "    return o.rank\n",
-    "\n",
-    "print [o.name for o in sorted(objs, key=obj_name)]\n",
-    "print [o.name for o in sorted(objs, key=obj_rank)]"
+    "[o.name for o in sorted(objs, key=obj_rank)]"
    ]
   },
   {
@@ -217,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
