--- a/better-python/lambda-expressions/lambda-blank.ipynb
+++ b/better-python/lambda-expressions/lambda-blank.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -127,6 +127,17 @@
    "metadata": {},
    "source": [
     "## closures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a"
    ]
   },
   {
@@ -164,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Not an expression"
+    "## error: not an expression"
    ]
   },
   {
@@ -182,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Explicit return"
+    "## error: explicit return"
    ]
   },
   {
@@ -207,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List comprehensions"
+    "## list comprehensions"
    ]
   },
   {
@@ -236,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ordinary functions"
+    "## ordinary functions"
    ]
   },
   {
@@ -280,11 +291,30 @@
    },
    "outputs": [],
    "source": [
-    "a = [1,2,3,4,5,6]\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "a_cubed = map(lambda x: x**3, a)\n",
+    "a_cubed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "a_plus_a_cubed = map(lambda x,y: x+y, a, a_cubed)\n",
-    "print a\n",
-    "print a_cubed\n",
     "print a_plus_a_cubed"
    ]
   }
@@ -305,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
